[Custom Views] `rootVisible` option doesn't work for data object trees + UI styling fix for main trees - fixes #4517

--- a/bundles/AdminBundle/Resources/public/css/admin.css
+++ b/bundles/AdminBundle/Resources/public/css/admin.css
@@ -1902,6 +1902,11 @@ span.warning {
     margin-left: -12px;
 }
 
+.pimcore_main_accordion .pimcore_tree_no_root_node .x-tree-view .x-grid-item-container {
+    padding-top: 0;
+    margin-left: 15px;
+}
+
 .pimcore_main_splitter {
     background-color: #E0E1E2;
 }
